<resources>
    <string name="app_name">Organizze</string>

    <!-- SLIDE -->
    <string name="de_onde_estiver">Organize suas contas\n de onde estiver</string>
    <string name="simples">Simples e fácil de usar!</string>
    <string name="onde_esta_seu_dinheiro">Saiba para onde está indo o seu dinheiro</string>
    <string name="categorizando_lancamentos">Categorizando lançamentos e vendo o destino de cada centavo</string>
    <string name="nunca_mais_esqueca">Nunca mais esqueça de pagar uma conta</string>
    <string name="alertas">Receba alertas quando quiser</string>
    <string name="tudo_organizado">Tudo organizado, no celular ou computador</string>
    <string name="use_no_smartphone">Use no seu smartphone e acessando o Organizze pelo site</string>
    <string name="crie_sua_conta">Crie sua conta grátis</string>
    <string name="junte_se">Junte-se a mais de meio milhão de pessoas\n e comece já</string>
    <string name="btn_cadastre">CADASTRE-SE</string>
    <string name="btn_jah_tenho_conta">Já tenho conta</string>

    <!-- CADASTRO -->
    <string name="cadastrar">Cadastrar</string>
    <string name="termos_de_uso">Termos de uso</string>

    <!-- LOGIN -->
    <string name="acesse_sua_conta">Acesse sua conta</string>
    <string name="entrar">Entrar</string>
    <string name="title_activity_home">HomeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_entrada">EntradaActivity</string>

</resources>